refactor bfs loop